<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/form_ticket"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/card_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="#55000000"
                android:text="@string/name_card"
                android:textSize="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.20"
            android:orientation="vertical"
            android:gravity="center">

            <Spinner
                android:id="@+id/card_category"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/spinner_style"/>


        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.20"
            android:orientation="horizontal"
            android:gravity="center">

            <RadioGroup
                android:id="@+id/skill"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/create_easy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Easy"
                    android:textSize="20dp"
                    android:layout_marginRight="5dp"/>

                <RadioButton
                    android:id="@+id/create_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Normal"
                    android:textSize="20dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>

                <RadioButton
                    android:id="@+id/create_hard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hard"
                    android:textSize="20dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/card_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="15dp"
                android:text="@string/description_card"
                android:textColor="#55000000"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/entry_result"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.64"
                android:gravity="center"
                android:textSize="8dp"/>

            <Button
                android:id="@+id/entry_card"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                android:text="@string/entry_card" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/create_card"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="@string/create_card"/>

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:text="Cancel"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ticket_images_fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="0">

        <fragment android:name="es.urjc.mov.javsan.cards.fichas.EntryImage"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="0"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ticket_locations_fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            tools:context="es.urjc.mov.javsan.fichas.CardCreate" />

        <fragment
            android:id="@+id/id_fragment_locations"
            android:name="es.urjc.mov.javsan.cards.fichas.EntryLocation"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="0.25"/>

    </LinearLayout>

</LinearLayout>